--- a/index.html
+++ b/index.html
@@ -1,73 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
-    #main{
-        font-family: Arial;
-        font-size: 1rem;
-        line-height: 1em;
-        text-align: center;
-        align-items: center;
-        background-color: #222629;
-        color: #E6D1CF;
-        justify-content: center;
-    }
-    #title{
-        font-size: 1.5 rem;
-        text-align: center;
-    }
-    #img-div{
-        background: wheat;
-        padding: 10px;
-        display: block;
-        margin: auto;
-        width: 10%;
-        height: auto;
-        border: thin;
-        color: black;
-        justify-content: center;
-    }
-    #image{
-        justify-self: center;
-        margin-left: auto;
-        margin-right: auto;
-        width: 98%;
-        height: auto;
-    }
-    #tribute{
-        justify-content:center;
-        font-size: 1em;
-        line-height: 1em;
-    }
-    #short-desc{
-        text-align: center;
-        width: 55%;
-        margin: auto;
-    }
-    #tribute-info{
-        width: 40%;
-        height: auto;
-        text-align: justify;
-        margin: auto;
-        line-height: 2em;
-    }
-    #closing{
-        text-align: center;
-        width: 55%;
-        margin: auto;
-    }
-
-</style>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/tribute.css">
 </head>
 <body id="main">
     <h1 id="title">Franz Kafka</h1>
     <figure id="img-div">
-        <img id="image" src="KafkaPortrait.jpg" alt="Kafka Portrait">
+        <img id="image" src="images/KafkaPortrait.jpg" alt="Kafka Portrait">
         <figcaption id="img-caption">
             Franz Kafka in 1923
         </figcaption>    
